[package]
name = "image-stamper"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.92"
image = { version = "0.25.1", default-features = false, features = ["png", "jpeg", "webp"] }
console_error_panic_hook = "0.1.7"
imageproc = "0.25.0"
rusttype = "0.9.3"
ab_glyph = "0.2.26"

[dependencies.web-sys]
version = "0.3.69"
features = [
  "console",
  "File",
  "FileReader",
  "Blob",
]
